[workspace]
members = [
    "quasiquodo",
    "quasiquodo-ts",
    "quasiquodo-ts-core",
    "quasiquodo-ts-macros",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/linabutler/quasiquodo"
keywords = ["ast", "macros", "quote", "typescript"]
rust-version = "1.89"

[workspace.dependencies]
num-bigint = "0.4"
quasiquodo = { path = "quasiquodo", version = "0.4.0" }
quasiquodo-ts = { path = "quasiquodo-ts", version = "0.4.0" }
quasiquodo-ts-core = { path = "quasiquodo-ts-core", version = "0.4.0" }
quasiquodo-ts-macros = { path = "quasiquodo-ts-macros", version = "0.4.0" }
swc_atoms = "=9.0.0"
swc_common = "=19.0.0"
swc_ecma_ast = "=21.0.0"
swc_ecma_codegen = "=24.0.0"
swc_ecma_parser = { version = "=35.0.0", features = ["unstable"] }
swc_ecma_utils = "=27.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"
