[workspace]
members = [
    "quasiquodo",
    "quasiquodo-py",
    "quasiquodo-py-core",
    "quasiquodo-py-macros",
    "quasiquodo-ts",
    "quasiquodo-ts-core",
    "quasiquodo-ts-macros",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/linabutler/quasiquodo"

[workspace.dependencies]
num-bigint = "0.4"
quasiquodo = { path = "quasiquodo", version = "0.4.1" }
quasiquodo-py-core = { path = "quasiquodo-py-core", version = "0.4.1" }
quasiquodo-py-macros = { path = "quasiquodo-py-macros", version = "0.4.1" }
quasiquodo-ts = { path = "quasiquodo-ts", version = "0.4.1" }
quasiquodo-ts-core = { path = "quasiquodo-ts-core", version = "0.4.1" }
quasiquodo-ts-macros = { path = "quasiquodo-ts-macros", version = "0.4.1" }
swc_atoms = "=9.0.0"
swc_common = "=19.0.0"
swc_ecma_ast = "=21.0.0"
swc_ecma_codegen = "=24.0.0"
swc_ecma_parser = { version = "=35.0.0", features = ["unstable"] }
swc_ecma_utils = "=27.0.0"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4", features = [
    "get-size",
] }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }

[workspace.lints.rust]
unsafe_code = "forbid"
