[package]
name = "quasiquodo-py-core"
description = "Implementations of Quasiquodo's Python macros"
publish = false
rust-version = "1.91"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
ruff_python_ast.workspace = true
ruff_python_parser.workspace = true
ruff_text_size.workspace = true
syn = { version = "2", features = ["full"] }
logos = "0.16"
thiserror = "2"
unicode-ident = "1"
winnow = "0.7"

[dev-dependencies]
syn = { version = "2", features = ["extra-traits"] }

[lints]
workspace = true
