[package]
name = "quasiquodo-py-macros"
description = "Proc macro shims for Quasiquodo's Python macros"
publish = false
rust-version = "1.91"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quasiquodo-py-core.workspace = true

[lints]
workspace = true
