[package]
name = "quasiquodo-py"
description = "Compile-time Python quasi-quoting"
publish = false
rust-version = "1.91"
keywords = ["ast", "macros", "python", "quote", "ruff"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
quasiquodo-py-macros = { workspace = true }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.2", features = [
    "get-size",
] }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.2" }

[dev-dependencies]
indoc = "2"
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff", tag = "0.15.2" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.2" }

[lints]
workspace = true
