[package]
name = "quasiquodo-py"
description = "Compile-time Python quasi-quoting"
publish = false
rust-version = "1.91"
keywords = ["ast", "macros", "python", "quote", "ruff"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
quasiquodo-py-macros = { workspace = true }
ruff_python_ast.workspace = true
ruff_text_size.workspace = true

[dev-dependencies]
indoc = "2"
ruff_python_codegen.workspace = true
ruff_source_file.workspace = true

[lints]
workspace = true
