[package]
name = "quasiquodo-ts-core"
description = "Implementations of Quasiquodo's TypeScript macros"
rust-version = "1.89"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
heck = "0.5"
num-bigint = { workspace = true }
proc-macro2 = "1"
quote = "1"
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_utils.workspace = true
syn = { version = "2", features = ["full"] }
thiserror = "2"
winnow = "0.7"

[dev-dependencies]
syn = { version = "2", features = ["extra-traits"] }

[lints]
workspace = true
