[package]
name = "quasiquodo"
description = "Compile-time TypeScript quasi-quoting"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["ts"]
ts = [
    "dep:swc_atoms",
    "dep:swc_common",
    "dep:swc_ecma_ast",
    "dep:swc_ecma_utils",
]

[dependencies]
num-bigint = { workspace = true }
quasiquodo-ts-macros = { workspace = true }
swc_atoms = { workspace = true, optional = true }
swc_common = { workspace = true, optional = true }
swc_ecma_ast = { workspace = true, optional = true }
swc_ecma_utils = { workspace = true, optional = true }

[dev-dependencies]
indoc = "2"
swc_ecma_codegen = { workspace = true }
