[package]
name = "quasiquodo"
description = "Compile-time quasi-quoting for typed languages"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["ts"]
ts = ["dep:quasiquodo-ts"]

[dependencies]
quasiquodo-ts = { workspace = true, optional = true }

[dev-dependencies]
swc_ecma_codegen = { workspace = true }

[lints]
workspace = true
